# knowledge-forest-draft

./: .gitignore  ARCHITECTURE.md  MODULES.md  README.md  briefing.md  conversation-transcript.md  pyproject.toml
agents/: README.md
chat/: README.md
crawler/: README.md  __init__.py  fetcher.py  models.py  sniff.py
crawler/adapters/: __init__.py  base.py  html.py  office.py  pdf.py  text.py
event-log/: README.md
fingerprint/: README.md
orchestration/: README.md
parser/: README.md
routing/: README.md
schemas/: README.md  __init__.py  agent-response.md  context-frame.md  crawled_resource.py  handover-briefing-schema.md  handover-briefing.md  personal-agent-response-schema.md  pre-audit-format.md  resource.md  six-dim-frame-placeholder.md  six-dim-frame.md  subscription.md  webhook-event-schema.md  webhook-event.md
services/discord-bot/: README.md
services/orchestrator/: README.md
services/orchestrator/prompts/: README.md  briefing-composer.md  briefing-template.md  identity-config.md  system-prompt.md
services/personal-agent/: README.md  SKILL.md
services/personal-agent/prompts/: README.md  briefing-handler.md  response-template.md  system-prompt.md
services/webhook-server/: README.md
transcripts/2026-04-16/: membranes.md
