[project]
name = "knowledge-forest"
version = "0.0.1"
description = "Knowledge Forest POC — 2-week MVP testing whether a structured frame around shared resources reduces overload."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24",
    "markitdown[docx,xlsx,pptx]>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crawler*", "schemas*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
